add new test template

--- a/test/styles/air.css
+++ b/test/styles/air.css
@@ -145,11 +145,9 @@ textarea {
   max-width: 100%;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,300);
-
 body {
   color: #444;
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family:  Helvetica, sans-serif;
   font-weight: 300;
   margin: 6rem auto 1rem;
   max-width: 48rem;
