modified the themes

--- a/test/theme/article.tmpl
+++ b/test/theme/article.tmpl
@@ -48,7 +48,7 @@
 </article>
 </div>
 <div class="footer">
-    <p>auto generate by  <a href="https://github.com/terasum/lettor">lettor</a> </p>
+    <p>automatic generate by  <a href="https://github.com/terasum/lettor">lettor</a> </p>
 </div>
 <script src="scripts/jquery-1.7.2.min.js"></script>
 <script src="scripts/highlight.pack.js"></script>
